Modif.Header 2da linea

--- a/index.html
+++ b/index.html
@@ -10,19 +10,36 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="./assets/img/logo.jpg" alt="Logo MB">
-        <nav class="navbar">
-            <label for="toggle-menu"><i class="fa-solid fa-bars"></i></label>
-            <input type="checkbox" id="toggle-menu">
+        <div class="header1">
+            <nav class="navbar1">
+                <img class="logo" src="./assets/img/logo.jpg" alt="Logo MB">
+                
+                <h1 class="nombre">Mezclar Bien</h1>
 
-            <ul class="navbar-list">
-                <li><a href="#" class="navbar-link">Inicio</a></li>
-                <li><a href="#" class="navbar-link">Nosotros</a></li>
-                <li><a href="#" class="navbar-link">Contacto</a></li>
-                <li><a href="#" class="navbar-link">Login</a></li>
-                <li><a href="#" class="navbar-link">Registro</a></li>
-            </ul>
-        </nav>
+                <label for="toggle-menu"><i class="fa-solid fa-bars"></i></label>
+                <input type="checkbox" id="toggle-menu">
+
+                <ul class="navbar1-list">
+                    <li><a href="#" class="navbar1-link">Ingresar</a></li>
+                    <li><a href="#" class="navbar1-link">Registrarse</a></li>
+                </ul>
+
+                <img src="./assets/img/basket.svg" alt="basket logo" class="basket-icon">
+            </nav>
+        </div>
+
+        <div class="header2">
+            <nav class="navbar2">
+                <ul class="navbar2-list">
+                    <li><a href="#" class="navbar2-link">Inicio</a></li>
+                    <li><a href="#" class="navbar2-link">Delicias</a></li>
+                    <li><a href="#" class="navbar2-link">Fiestas</a></li>
+                    <li><a href="#" class="navbar2-link">Nosotros</a></li>
+                    <li><a href="#" class="navbar2-link">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
+
     </header>
 
     <!-- <main>
