--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <input type="checkbox" id="toggle-menu">
 
                 <ul class="navbar1-list">
-                    <li><a href="#" class="navbar1-link">Ingresar</a></li>
-                    <li><a href="#" class="navbar1-link">Registrarse</a></li>
+                    <li><a href="./pages/login.html" class="navbar1-link">Ingresar</a></li>
+                    <li><a href="./pages/register.html" class="navbar1-link">Registrarse</a></li>
                 </ul>
 
                 <img src="./assets/img/basket.svg" alt="basket logo" class="basket-icon">
