cards-about.us-contacto-footer

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         <div class="header2">
             <nav class="navbar2">
                 <ul class="navbar2-list">
-                    <li><a href="#" class="navbar2-link">Inicio</a></li>
-                    <li><a href="#" class="navbar2-link">Delicias</a></li>
-                    <li><a href="#" class="navbar2-link">Fiestas</a></li>
-                    <li><a href="#" class="navbar2-link">Nosotros</a></li>
-                    <li><a href="#" class="navbar2-link">Contacto</a></li>
+                    <li><a href="#hero">Inicio</a></li>
+                    <li><a href="#cards">Delicias</a></li>
+                    <li><a href="#agasajos">Agasajos</a></li>
+                    <li><a href="#about-us">Nosotros</a></li>
+                    <li><a href="#contacto">Contacto</a></li>
                 </ul>
             </nav>
         </div>
@@ -43,7 +43,7 @@
     </header>
 
     <main>
-        <section class="hero">
+        <section id="hero">
             <div class="hero-text">
                 <!-- <img src="./assets/img/camiseta_pumas.jpeg" alt="camiseta pumas" /> -->
 
@@ -66,9 +66,127 @@
                 <img src="./assets/img/camiseta_pumas.jpeg" alt="camiseta_pumas">
             </div>
         </section>
+
+        <!-- Cards Section -->
+        <section id="cards">
+            <h2>Productos Artesanales de Gran Calidad</h2>
+            <div class="cards-container">
+                <div class="card-info">
+                    <img src="./assets/img/baby_shark.jpeg" alt="baby_shark">
+                    <h3>Torta de Vainilla</h3>
+                    <p>Rellena dulce de leche</p>
+                    <p>Precio: $10</p>
+                    <button>Comprar</button>
+                </div>
+                <div class="card-info">
+                    <img src="./assets/img/los80.jpeg" alt="los80">
+                    <h3>Torta de Vainilla</h3>
+                    <p>Rellena de crema y durazno</p>
+                    <p>Precio: $12</p>
+                    <button>Comprar</button>
+                </div>
+                <div class="card-info">
+                    <img src="./assets/img/abogada.jpeg" alt="Abogada">
+                    <h3>Torta de Frutilla</h3>
+                    <p>Rellena crema y frutillas</p>
+                    <p>Precio: $15</p>
+                    <button>Comprar</button>
+                </div>
+                <div class="card-info">
+                    <img src="./assets/img/letra_M.jpeg" alt="letra_M">
+                    <h3>ChocoTorta</h3>
+                    <p>Rellena cazamcrem + dulce de leche</p>
+                    <p>Precio: $10</p>
+                    <button>Comprar</button>
+                </div>
+                <div class="card-info">
+                    <img src="./assets/img/racing.jpeg" alt="racing">
+                    <h3>Torta de Vainilla</h3>
+                    <p>Rellena de crema y durazno</p>
+                    <p>Precio: $12</p>
+                    <button>Comprar</button>
+                </div>
+                <div class="card-info">
+                    <img src="./assets/img/red_velvet.jpeg" alt="red_velvet">
+                    <h3>Torta de Frutilla</h3>
+                    <p>Rellena crema de frutillas y frutos rojos</p>
+                    <p>Precio: $15</p>
+                    <button>Comprar</button>
+                </div>
+            </div>
+        </section>
+
+        <section id="agasajos">
+            <!-- Cards Section -->
+            <section id="cards">
+                <h2>Productos para Agasajos/Dias Festivos</h2>
+                <div class="cards-container">
+                    <div class="card-info">
+                        <img src="./assets/img/desayuno1.jpeg" alt="desayuno1">
+                        <h3>Canasta de Delicias</h3>
+                        <h4>Torta-Budin-Sand.Miga-Jugo-Te-Medialuna-B.Graza</h4>
+                        <p>Precio: $10</p>
+                        <button>Comprar</button>
+                    </div>
+                    <div class="card-info">
+                        <img src="./assets/img/desayuno2.jpeg" alt="desayuno2">
+                        <h3>Canasta de Delicias</h3>
+                        <h4>Torta-Budin-Sand.Miga-Muffin-B.Graza</h4>
+                        <p>Precio: $12</p>
+                        <button>Comprar</button>
+                    </div>
+                </div>
+        </section>
+
+        <section id="about-us">
+            <!-- About-Us Section -->
+            <h2>Sobre Nosotros</h2>
+            <div class="about-us-text">
+                <p>Nuestra empresa de repostería artesanal comenzó con una pasión compartida por la creación de deliciosos postres y la satisfacción de hacerlos de manera artesanal. Todo comenzó cuando un grupo de amigos, entusiastas de la cocina y amantes de los postres, decidió unir sus talentos y conocimientos para dar vida a este sueño dulce.
+                    Nos dimos cuenta de que en el mercado había una creciente demanda de productos de repostería de alta calidad, hechos a mano y con ingredientes frescos y naturales. Queríamos ofrecer algo único, que se destacara por su sabor excepcional y su presentación impecable.
+                    Comenzamos trabajando desde nuestras propias cocinas, experimentando con recetas tradicionales y explorando nuevas combinaciones de sabores. Cada uno de nosotros tenía habilidades diferentes: algunos eran expertos en pasteles y tortas, otros en galletas y cupcakes, y algunos en postres más sofisticados como macarons y petit fours.
+                    A medida que nuestras creaciones empezaron a ganar popularidad entre amigos y familiares, nos dimos cuenta de que teníamos el potencial para llevar nuestras delicias más allá de nuestro círculo íntimo. Así nació la idea de fundar nuestra empresa de repostería artesanal.
+                    Juntamos nuestros ahorros y nos comprometimos a trabajar arduamente para establecer un negocio exitoso. Alquilamos un pequeño local y equipamos nuestra cocina con todo lo necesario para producir nuestros productos en mayor escala sin perder la calidad y el toque artesanal.
+                    Para promover nuestro negocio, utilizamos las redes sociales y creamos una página web donde mostrábamos fotos de nuestras creaciones y compartíamos historias detrás de cada postre. La respuesta fue abrumadora y pronto comenzaron a llegar los pedidos. La gente apreciaba el amor y la dedicación que poníamos en cada producto.
+                    A medida que crecimos, ampliamos nuestro menú y comenzamos a ofrecer servicios para eventos especiales como bodas, cumpleaños y reuniones corporativas. La calidad y el sabor excepcionales de nuestros postres nos hicieron destacar y nos ganamos la confianza de nuestros clientes.
+                    Hoy en día, nuestra empresa de repostería artesanal se ha convertido en un referente en nuestra comunidad. Seguimos comprometidos con nuestros valores iniciales de calidad, creatividad y atención al detalle. Cada día buscamos superarnos, explorar nuevas técnicas y sabores, y brindar experiencias dulces inolvidables a nuestros clientes.
+                    Estamos orgullosos de cómo ha evolucionado nuestra empresa y estamos emocionados por lo que el futuro nos depara. Seguiremos endulzando la vida de las personas con nuestros productos únicos y hechos con pasión.</p>
+            </div>
+        </section>
+
+        <section id="contacto">
+            <!-- Contact Section -->
+            <h2>Información de contacto</h2>
+            <form class="form-title">
+                <!-- Nombre -->
+                <input type="text" placeholder="Nombre" class="form-input" />
+                <!-- Email -->
+                <input type="email" placeholder="Email" class="form-input" />
+                <!-- Mensaje -->
+                <textarea placeholder="mensaje" required class="form-input"></textarea>
+                <a href="./index.html" class="form__button">Ingresar</a>
+            </form>
+
+            <p>Ubicación: Quilmes, Argentina</p>
+            <div class="map-container">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26233.945634321764!2d-58.267319443460856!3d-34.724263593747885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a32e38e45f5777%3A0x6a86dac21334524f!2sQuilmes%2C%20Provincia%20de%20Buenos%20Aires%2C%20Argentina!5e0!3m2!1ses!2smx!4v1687266043216!5m2!1ses!2smx" width="600" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </section>
     </main>
     <footer>
-
+		<!-- FOOTER -->
+		<div class="footer-container">
+            <div class="footer-social">
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-facebook"></i>
+            </div>
+            <p class="footer-marca">Mezclar Bien</p>
+            <ul class="footer-terms">
+                <li><a href="#"><i class="fa-solid fa-phone">1158238293</i></a></li>
+                <li><a href="#"><i class="fa-solid fa-envelope">mezclarbien@gmail.com</i></a></li>
+                <li><a href="#"><i class="fa-solid fa-clock">Lun a Vie: 9 a 17hs</i></a></li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
