modif login y register

--- a/pages/register.html
+++ b/pages/register.html
@@ -14,8 +14,6 @@
         <div class="header1">
             <img class="logo" src="../assets/img/logo.jpg" alt="Logo MB">
 
-            <h1 class="nombre">Mezclar Bien</h1>
-
             <nav class="navbar1">
                 <label for="toggle-menu"><i class="fa-solid fa-bars"></i></label>
                 <input type="checkbox" id="toggle-menu">
@@ -28,10 +26,13 @@
                 <img src="../assets/img/basket.svg" alt="basket logo" class="basket-icon">
             </nav>
         </div>
+        <div class="header2">
+            <h1 class="nombre">Mezclar Bien</h1>
+        </div>
     </header>
     
     <main>
-      <form class="form">
+      <form class="form_register">
         <h1 class="form__title">Crea tu cuenta</h1>
         <!-- Nombre -->
         <input type="text" placeholder="Nombre" class="form__input" />
@@ -47,14 +48,6 @@
 
 
   <footer class="footer">
-    <!-- <ul class="footer__nav">
-      <li><a href="#" class="footer__nav--link">Términos de Uso</a></li>
-      <li><a href="#" class="footer__nav--link">Trabajá con Nosotros</a></li>
-      <li><a href="#" class="footer__nav--link">Soporte</a></li>
-    </ul>
-    <p class="footer__text">
-      Hecho con ❤️ en <span class="">NUCBAZAPPI</span>
-    </p> -->
   </footer>
 </body>
 
