--- a/pages/login.html
+++ b/pages/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/style.css">
-    <link rel="stylesheet" href="../assets/login.css">
+    <!-- <link rel="stylesheet" href="../assets/login.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Mezclar Bien</title>
 </head>
@@ -13,8 +13,6 @@
     <header>
         <div class="header1">
             <img class="logo" src="../assets/img/logo.jpg" alt="Logo MB">
-
-            <h1 class="nombre">Mezclar Bien</h1>
 
             <nav class="navbar1">
                 <label for="toggle-menu"><i class="fa-solid fa-bars"></i></label>
@@ -28,18 +26,19 @@
                 <img src="../assets/img/basket.svg" alt="basket logo" class="basket-icon">
             </nav>
         </div>
+        <div class="header2">
+            <h1 class="nombre">Mezclar Bien</h1>
+        </div>
     </header>
     
     <main>
-      <div class="container">
-        <!-- <h2>Login Form</h2> -->
-        <form class="form">
-          <h1 class="form__title">Iniciar Sesión</h1>
-          <input type="email" placeholder="Email" class="form__input" />
-          <input type="password" placeholder="Password" class="form__input" />
-          <a href="../index.html" class="form__button">Ingresar</a>
-        </form>
-      </div>
+      <!-- <h2>Login Form</h2> -->
+      <form class="form_login">
+        <h1 class="form__title">Iniciar Sesión</h1>
+        <input type="email" placeholder="Email" class="form__input" />
+        <input type="password" placeholder="Contraseña" class="form__input" />
+        <a href="../index.html" class="form__button">Ingresar</a>
+      </form>
     </main>
 
   </body>
